--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,39 @@
-.hello-world{
-  background-color: aquamarine;
+@font-face {
+  font-family: 'Norse-Bold';
+  src: url('./assets/Norse-Bold.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body{
+  padding: 0;
+  margin: 0;
+}
+
+.container{
+  display: flex;
+}
+
+.image {
+  background-image: url(./assets/carolina-IXShv_bCP1Y-unsplash.jpg);
+  height: 100vh;
+  background-size:cover;
+  color: #f5f5f5;
+  font-family: 'Norse-Bold';
+}
+
+.logo {
+  display: flex;
+  background-color: rgb(0 0 0 / 40% );
+  margin-top: 12rem;
+  padding: 0rem 10rem;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.logo img, 
+.logo h1{
+  font-size: 7rem;
+  height: 7rem;
 }
