--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,91 @@ body{
   font-size: 7rem;
   height: 7rem;
 }
+
+.content-container{
+  height: 100vh;
+  flex: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  background-color: rgb(241, 241, 241);
+}
+
+.content {
+  padding: 3.5rem 15rem 3.5rem 3.5rem;
+}
+
+.content-top {
+  align-items: end;
+}
+
+.content-top p,
+.form legend {
+  font-size: 1.7rem;
+  font-weight: 600;
+}
+
+.form {
+  background-color: white;
+  box-shadow: 0px 1px 5px;
+  margin-bottom: 10px;
+  padding: 3.5rem;
+  display: flex;
+}
+
+.form legend {
+  padding-bottom: 2.5rem;
+}
+
+form{
+  flex: auto;
+  font-family:  sans-serif;
+}
+
+input {
+  height: 1.7rem;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #E5E7EB;
+  border-radius: 7px;
+}
+
+input:focus{
+  box-shadow: 0px 1px 5px;
+}
+
+button {
+  border:none;
+  background-image:none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  background-color: #e2a516;
+  border-radius: 5%;
+  max-width: 250px;
+  padding: 1.5rem 0.5rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin: 2.5rem 3.5rem;
+}
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4.5rem;
+  padding-right: 10rem;
+}
+
+
+p#sign-up{
+  padding-left: 3.5rem;
+}
+
+.form div{
+  display: flex;
+  min-width: 300px;
+  flex-direction: column;
+}
+
